Adding mode selection scene