@@ -15,6 +15,10 @@ javac -d ../classes com/themusicquiz/composants/Test.java
 #export your javafx path
 export PATH_TO_FX=/usr/share/java/openjfx-12.0.1_linux-x64_bin-sdk/javafx-sdk-12.0.1/lib
 #compile
+javac --module-path $PATH_TO_FX --add-modules javafx.controls -d ../classes com/themusicquiz/GUI/WelcomeScene.java
+javac --module-path $PATH_TO_FX --add-modules javafx.controls -d ../classes com/themusicquiz/GUI/SceneApp.java
+javac --module-path $PATH_TO_FX --add-modules javafx.controls -d ../classes com/themusicquiz/GUI/HomeScene.java
+javac --module-path $PATH_TO_FX --add-modules javafx.controls -d ../classes com/themusicquiz/GUI/ModeSelectionScene.java
 javac --module-path $PATH_TO_FX --add-modules javafx.controls -d ../classes com/themusicquiz/GUI/Gui.java
 javac --module-path $PATH_TO_FX --add-modules javafx.controls -d ../classes com/themusicquiz/GUI/Controller.java
 javac --module-path $PATH_TO_FX --add-modules javafx.controls -d ../classes com/themusicquiz/GUI/Main.java
